# Glosso

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20260218000001_create_books_and_pages.sql
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: translate-locales.mjs
frontend/src/: App.vue  i18n.js  main.js
frontend/src/assets/: main.css
frontend/src/components/: LanguageSelector.vue  SettingsPanel.vue  TranslationBubble.vue  WordBank.vue  WordPanel.vue  WordToken.vue
frontend/src/composables/: useBook.js  useLanguage.js  useSettings.js  useWords.js
frontend/src/lib/: api.js
frontend/src/locales/: en.json
frontend/src/router/: index.js
frontend/src/views/: LandingView.vue  LibraryView.vue  ReaderView.vue
